# STL_impl

TypeErasure/: CMakeLists.txt
TypeErasure/includes/: Wrapper.hpp
TypeErasure/tests/: WrapperTest.cpp
TypeTraits/: CMakeLists.txt
TypeTraits/includes/: IsSame.h  RemoveCV.h  RemoveRef.h
TypeTraits/tests/: TypeTraitsTest.cpp
UniquePtr/: CMakeLists.txt
UniquePtr/includes/: UniquePtr.h
UniquePtr/tests/: UniquePtrTest.cpp
Variant/: CMakeLists.txt
Variant/includes/: Variant.h
Variant/tests/: VariantTest.cpp
